Final project changes

--- a/CHANNELS_PRODUCTS.html
+++ b/CHANNELS_PRODUCTS.html
@@ -20,11 +20,8 @@
         <div class="row">
             <div class="col-md-12 jumbotron text-center"> 
                 <div class="jumbotron text-center"  style = "background-color: rgb(255, 255, 255);" >  
+                    <br>
                     <h1>Vitamin Ventures</h1>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
                     <br>
                     <br>
                 <nav class="navigation"> 
@@ -48,9 +45,10 @@
         </div>
     </header>
     <div class="container" id="visualizations" style="width:70%;">
-        <h1 class="visualization-header text-center">Key Takeaways</h1>
+        <div>
+            <h1 class="visualization-header text-center">Key Takeaways</h1>
         <br>
-        <h3>
+        <h3 >
             <ul>
                 <li>
                     Vitamin Ventures should release three or four more products through their e-commerce and retailer channels.
@@ -66,10 +64,13 @@
                 </li>
             </ul>
         </h3>
+        </div>
         <div>
             <h1  class = "text-center">
                 Sales
             </h1>
+        </div>
+        <div  >
             <br>
             <h3>
                 As you will see in the next three charts, the analysis confirms the overall growth rate of 95% 
@@ -122,10 +123,10 @@
             <div class="col-md-12 plots">
                 <br>
                 <div class="col-md-6 plots">
-                    <embed type="text/html" src="Graphs/Total_Sales_by_Channel_2020_pie.html"  width="740" height="500">
+                    <embed type="text/html" src="Graphs/Total_Sales_by_Channel_2020_pie.html"  width="750" height="500">
                 </div>  
                 <div class="col-md-6 plots">
-                    <embed type="text/html" src="Graphs/Total_Sales_by_Channel_2021_pie.html"  width="740" height="500">
+                    <embed type="text/html" src="Graphs/Total_Sales_by_Channel_2021_pie.html"  width="750" height="500">
                 </div>
             </div>
         </div>
@@ -173,13 +174,10 @@ For future, Vitamin Ventures should release three or four more products to an e-
             <embed type="text/html" src="Graphs/Products_Sales_Line.html" width="1500" height="600">
             </div>
             <div class="col-md-12 plots" >
-                <!--
-                                    <h3>
-                    Focus should be on growing the top 15 products. These contribute to 80% to their sales while the other 50 products only produce 20% of their quantity sales.
-                <br>
-                Even though the data shows consistent growth, we see dips and spikes every other month. After discussing this data with the board, Vitamin Ventures confirms that sometimes they will have to turn away orders based on supply chain issues.
+                <h3>
+                    The trend line chart of the top products (Top Products Sales Growth 2020 and 2021) more explicitly demonstrates the supply chain issues with items being out of stock which makes it hard to tell if there is any seasonality to the data. After discussing this data with the board, Vitamin Ventures confirms that sometimes they will have to turn away orders based on supply chain issues.
                 </h3>
-                -->
+
             </div>
         </div>
         <div class="row  col-md-50  ">
@@ -194,9 +192,8 @@ For future, Vitamin Ventures should release three or four more products to an e-
             <embed type="text/html" src="Graphs/Product_Sales_Bar.html" width="1500" height="600">
             </div>
             <div class="col-md-12 plots" >
-                <!--
-                    <h3> Vitamin Ventures should release three or four more products to an e-commerce channel and to a big box retailer. Additionally, they should not invest as much time and effort into their other wholesalers </h3>
-                -->
+                
+                    <h3> Based on our data (see chart Total Skus Breakdown by Channels), the top two products, sku 6666 Thyroid Complex and 3333 Fruits and Greens 30 capsules, roughly 33% of all sales were purchased through their e-commerce vendor, Amazon. Further analysis revealed the top 15 products account for 80% of Vitamin Ventures’ total sales while the other 50 products only produce 20%. Even if they are worried about taking away sales from their own website, they need to keep in mind that the volume of the sales that Amazon and Target can provide them, will make up for the marginal decrease in profit that the third-party vendor costs.                                                  For future, Vitamin Ventures should release three or four more products to an e-commerce channel and to a big box retailer. Additionally, they should not invest as much time and effort into their wholesalers </h3>
             </div>
         </div>
         <br>
