--- a/INTERNATIONAL.html
+++ b/INTERNATIONAL.html
@@ -16,17 +16,10 @@
         <div class="row">
             <div class="col-md-12 jumbotron text-center"> 
                 <div class="jumbotron text-center"  style = "background-color: rgb(255, 255, 255);" >  
+                    <br>
                     <h1>Vitamin Ventures</h1>
                     <br>
                     <br>
-                    <h3>
-                        While not being a main focus, Vitamin Ventures has maintained a global pressence to a certain degree.
-                        <br>
-                        Here we will dive into web sales data focused internationally to identify if it would be worthwhile to spend efforts growing 
-                        sales outside the US.
-                        <br>
-                        <br>
-                    </h3>
                 <nav class="navigation"> 
                     <h2>
                         <a style="margin-right: 3em;" href="index.html"> 
@@ -48,6 +41,20 @@
         </div>
     </header>
     <div class="container" id="visualizations"  style="width:70%;">
+        <div class="roc text-center">
+            <h3>
+                <b>
+                <em>
+                    While not being a main focus, Vitamin Ventures has maintained a global pressence to a certain degree.
+                    <br>
+                    Here we will dive into web sales data focused internationally to identify if it would be 
+                    <br>worthwhile to spend efforts growing 
+                    sales outside the US.
+                </em>
+                </b>
+                </h3>
+        </div>
+        <br>
         <h1 class="visualization-header  text-center">Key Takeaways</h1>
         <br>
         <h3> 
