--- a/USA.html
+++ b/USA.html
@@ -16,11 +16,8 @@
         <div class="row">
             <div class="col-md-12 jumbotron text-center"> 
                 <div class="jumbotron text-center"  style = "background-color: rgb(255, 255, 255);" >  
+                    <br>
                     <h1>Vitamin Ventures</h1>
-                    <br>
-                    <br>
-                    <h3>Vitamin Ventures has made a big footprint in the United States. Here we will break down all web sales data in the US with location sales data.</h3>
-                    <br>
                     <br>
                     <br>
                 <nav class="navigation"> 
@@ -44,6 +41,17 @@
         </div>
     </header>
     <div class="container" id="visualizations" style="width:70%;">
+        <div class="roc text-center" >
+                    <h3>
+                    <b>
+                    <em>
+                    Vitamin Ventures has made a big footprint in the United States. 
+                    <br>Here we will break down all web sales data in the US with location sales data.
+                    </em>
+                    </b>
+                    </h3>
+        </div>
+        <br>
         <h1 class="visualization-header text-center">Key Takeaways</h1>
         <br>
         <h3>Major cities contribute to a majority of sales. 
