--- a/index.html
+++ b/index.html
@@ -16,15 +16,10 @@
         <div class="row">
             <div class="col-md-12 jumbotron text-center"> 
                 <div class="jumbotron text-center"  style = "background-color: rgb(255, 255, 255);" >  
-                    <h1>Vitamin Ventures</h1>
-                    <h3>
-                    Vitamin Ventures was founded to make lives better with their vitamins.
-                      <br>
-                    The company, with a global presence, manufactures and sells vitamins directly to consumers online, through select retailers and to third party wholesalers.
                     <br>
-                    They are currently in their 5th year of business, and they know they are growing astronomically, but they want to position themselves to be a lasting brand.
-                    </h3>
-                      <br>
+                    <h1>Vitamin Ventures</h1>
+                    <br>
+                    <br>
                 <nav class="navigation"> 
                     <h2>
                       <a style="margin-right: 3em;" href="index.html"> 
@@ -45,8 +40,22 @@
             </div>
         </div>
     </header>
+    <div class="text-center">
+      <h3>
+        <b>
+        <em>
+        Vitamin Ventures was founded to make lives better with their vitamins.
+          <br>
+        The company, with a global presence, manufactures and sells vitamins directly to consumers online, through select retailers and to third party wholesalers.
+        <br>
+        They are currently in their 5th year of business, and they know they are growing astronomically, but they want to position themselves to be a lasting brand.
+        </em>
+      </b>
+      </h3>
+      <br>
+    </div>
     <div class="container"  style="width:80%;">
-      <div>
+      <div class="container"  style="width:70%;"> 
         <h1 class="col-md-50 text-center">Project Overview</h1>
         <br>
         <h2>
@@ -122,10 +131,14 @@
             <br>
             <br>
             <br>
-              <h2><b>Contributors</b>
+              <h2><b>Contributors & LinkedIn</b>
                 <br>
                 <br>
-                Linnea Rice| Zarina Kossakova | Morgan Peterson | Holly Carter | Jillian Jagoda
+                <h2><a href="https://www.linkedin.com/in/linnea-rice-70b8b3107/"> Linnea Rice </a> | 
+                  <a href="https://www.linkedin.com/in/zarina-kossakova/"> Zarina Kossakova</a> | 
+                  <a href="https://www.linkedin.com/in/holly-r-carter-21531042"> Morgan Peterson</a>| 
+                  <a href="https://www.linkedin.com/in/zarina-kossakova/"> Holly Carter</a>| 
+                  <a href="https://www.linkedin.com/in/jillianjagoda/"> Jillian Jagoda</a></h2>
               </h2>
               <br>
               <h2> 
