Final project changes

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <br>
                 <h2><a href="https://www.linkedin.com/in/linnea-rice-70b8b3107/"> Linnea Rice </a> | 
                   <a href="https://www.linkedin.com/in/zarina-kossakova/"> Zarina Kossakova</a> | 
-                  <a href="https://www.linkedin.com/in/holly-r-carter-21531042"> Morgan Peterson</a>| 
+                  <a href="https://www.linkedin.com/in/morganpeterson7/"> Morgan Peterson</a>| 
                   <a href="https://www.linkedin.com/in/holly-r-carter-21531042"> Holly Carter</a>| 
                   <a href="https://www.linkedin.com/in/jillianjagoda/"> Jillian Jagoda</a></h2>
               </h2>
